--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </tbody>
     </table>
 <hr>
-	<h3><a href="Hobbies.html">Hobbies</a></h3>
+	<h3><a href="hobbies.html">Hobbies</a></h3>
 	<h3><a href="contact.html">My Contact Details</a></h3>
 </body>
 </html>
